[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/UI/UI.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/Weapons/BulletIcon.png" type="Texture" id=2]
[ext_resource path="res://Assets/GUI/KenneyPixel.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 14
outline_size = 1
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0.752941, 0.196078, 0.105882, 1 )
font_data = ExtResource( 3 )

[node name="UI" type="Control"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 0.29
margin_left = 4.0
margin_top = 2.0
margin_right = 42.0
margin_bottom = 20.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 38.0
margin_bottom = 18.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_right = 10.0
margin_bottom = 18.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="LivesLabel" type="Label" parent="MarginContainer/HBoxContainer"]
margin_left = 14.0
margin_top = 3.0
margin_right = 32.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.898039, 0.2, 0.0862745, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "999"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
anchor_bottom = 1.0
margin_left = 86.2941
margin_top = 24.5587
margin_right = 186.294
margin_bottom = 110.559
rect_pivot_offset = Vector2( 1, 1 )
rect_clip_content = true
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 99.0
margin_bottom = 14.0
text = "Pause"
align = 1
uppercase = true

[node name="ResumeBtn" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 99.0
margin_bottom = 38.0
text = "Resume"

[node name="MenuBtn" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 99.0
margin_bottom = 62.0
text = "Menu"

[node name="ExitBtn" type="Button" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 99.0
margin_bottom = 86.0
text = "Exit"

[node name="WinContainer" type="MarginContainer" parent="."]
visible = false
margin_left = 32.0
margin_top = 50.0
margin_right = 222.0
margin_bottom = 90.0

[node name="WinMessage" type="Label" parent="WinContainer"]
margin_top = 6.0
margin_right = 190.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.870588, 0.823529, 0.141176, 1 )
text = "Congratulations!
The crabs are now safe thanks to you!"
align = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
